--- a/client/stylesheets/generic.css
+++ b/client/stylesheets/generic.css
@@ -5,8 +5,9 @@ body {
 	overflow-y:scroll;
 }
 
-h2{
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	text-transform: none;
+    font-family: 'Century Gothic';
 }
 
 a {
