--- a/client/templates/influencer/home/statsSection.html
+++ b/client/templates/influencer/home/statsSection.html
@@ -18,13 +18,13 @@
 							{{  # if user.services.twitter.screenName }}
 								<i class="fa fa-twitter circleicon coloricon"></i>
 							{{ else }}
-								<i class="fa fa-twitter color"></i>
+								<i class="fa fa-twitter circleiconoff coloricon"></i>
 							{{ /if }}
 
 							{{ # if user.services.instagram }}
 								<i class="fa fa-instagram circleicon coloricon"></i>
 							{{ else }}
-								<i class="fa fa-instagram"></i>
+								<i class="fa fa-instagram circleiconoff coloricon"></i>
 							{{ /if }}
 
 							<i class="fa fa-facebook circleiconoff coloricon"></i>
