--- a/client/templates/layouts/_influencerHeader.html
+++ b/client/templates/layouts/_influencerHeader.html
@@ -4,7 +4,7 @@
         <!-- Logo -->
         <a href="{{pathFor 'home'}}" class="logo logosup">
             <!-- <b>Admin</b>LTE 2 -->
-            <img src="{{pathFor 'home'}}images/eglow.png" style="margin-left: 30px;">
+            <img src="{{pathFor 'home'}}images/logoeglow.png">
         </a>
 
         <!-- <a class="navbar-brand logosup" href="http://agenciadev01.info/lab/digirep/front-business/index.php"></a> -->
