--- a/client/templates/influencer/home/myCommunitySection.html
+++ b/client/templates/influencer/home/myCommunitySection.html
@@ -220,20 +220,20 @@
 
 				<div class="col-md-6">
 					
-					<p style="background:rgba(255,255,255,0.1) !important;">1 {{datatwitter.profilecommunity.[0].Top10Hashtags.[0].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.2) !important;">2 {{datatwitter.profilecommunity.[0].Top10Hashtags.[1].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.1) !important;">3 {{datatwitter.profilecommunity.[0].Top10Hashtags.[2].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.2) !important;">4 {{datatwitter.profilecommunity.[0].Top10Hashtags.[3].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.1) !important;">5 {{datatwitter.profilecommunity.[0].Top10Hashtags.[4].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.1) !important;border-radius: 10px;    padding-left: 15px;">1 {{datatwitter.profilecommunity.[0].Top10Hashtags.[0].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.2) !important;border-radius: 10px;    padding-left: 15px;">2 {{datatwitter.profilecommunity.[0].Top10Hashtags.[1].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.1) !important;border-radius: 10px;    padding-left: 15px;">3 {{datatwitter.profilecommunity.[0].Top10Hashtags.[2].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.2) !important;border-radius: 10px;    padding-left: 15px;">4 {{datatwitter.profilecommunity.[0].Top10Hashtags.[3].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.1) !important;border-radius: 10px;    padding-left: 15px;">5 {{datatwitter.profilecommunity.[0].Top10Hashtags.[4].Hashtag}}</p>
 
 				</div>
 				<div class="col-md-6">
 					
-					<p style="background:rgba(255,255,255,0.2) !important;">6 {{datatwitter.profilecommunity.[0].Top10Hashtags.[5].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.1) !important;">7 {{datatwitter.profilecommunity.[0].Top10Hashtags.[6].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.2) !important;">8 {{datatwitter.profilecommunity.[0].Top10Hashtags.[7].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.1) !important;">9 {{datatwitter.profilecommunity.[0].Top10Hashtags.[8].Hashtag}}</p>
-					<p style="background:rgba(255,255,255,0.2) !important;">10 {{datatwitter.profilecommunity.[0].Top10Hashtags.[9].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.2) !important;border-radius: 10px;    padding-left: 15px;">6 {{datatwitter.profilecommunity.[0].Top10Hashtags.[5].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.1) !important;border-radius: 10px;    padding-left: 15px;">7 {{datatwitter.profilecommunity.[0].Top10Hashtags.[6].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.2) !important;border-radius: 10px;    padding-left: 15px;">8 {{datatwitter.profilecommunity.[0].Top10Hashtags.[7].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.1) !important;border-radius: 10px;    padding-left: 15px;">9 {{datatwitter.profilecommunity.[0].Top10Hashtags.[8].Hashtag}}</p>
+					<p style="background:rgba(255,255,255,0.2) !important;border-radius: 10px;    padding-left: 15px;">10 {{datatwitter.profilecommunity.[0].Top10Hashtags.[9].Hashtag}}</p>
 
 				</div>
 
